--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ h1 {
     cursor: pointer;
 }
 
-/*container with letters in 2 columns*/
+/* блок с буквами в 2 столбцах */
 .alphabet-list {
     display: flex;
     gap: 20px;
@@ -93,4 +93,44 @@ h1 {
     width: 100%; /* растягиваем по ширине родителя */
     min-height: 30px;
     box-sizing: border-box;
+}
+
+.modal {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000080;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 500px;
+    max-height: 70%;
+    overflow-y: auto;
+}
+
+/* Стиль для скрытия */
+.hidden {
+    display: none !important;
+}
+
+/* Стили для крестика закрытия */
+.close-modal {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+/* Стили для результатов поиска */
+#search-results {
+    margin-top: 20px;
 }
